fix cart header alignment

--- a/src/index.css
+++ b/src/index.css
@@ -146,6 +146,7 @@ h2 {
   padding: 1em 3em;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .cart-header > a > button {
